# rag-assistant-app

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: architecture.md  parameters.md
src/rag_assistant_app/: __init__.py  config.py  logging.py
src/rag_assistant_app/embeddings/: embedder.py
src/rag_assistant_app/ingestion/: chunking.py  loaders.py  metadata.py
src/rag_assistant_app/llm/: __init__.py  openai_compat_client.py
src/rag_assistant_app/prompts/: __init__.py  chat_prompt.py
src/rag_assistant_app/retrieval/: __init__.py  hybrid_retriever.py  reranker.py  retriever.py
src/rag_assistant_app/service/: __init__.py  chat_service.py  rag_service.py
src/rag_assistant_app/store/: chroma_store.py  vector_store.py
ui/: __init__.py  app.py
